Bugfixing according to FindBugs report.